test added ran successfuly

--- a/src/app.css
+++ b/src/app.css
@@ -177,5 +177,8 @@
     border-color: #7B61FF;
     transform: translateY(-2px);
   }
-}
 
+  .reversed-card-image {
+    transform: rotate(180deg);
+  }
+}
